Init branch for zkeepalived
Signed-off-by: Julien <zhang.jun3g@zte.com.cn>

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+zkeepalived is branch of keepalived, which add more features in
+queue and configuration.
+
 The main goal of the keepalived project is to add a strong & robust
 keepalive facility to the Linux Virtual Server project.
 It implements a multilayer TCP/IP stack checks. Keepalived implements
